--- a/article4.html
+++ b/article4.html
@@ -4,10 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="three days of rain, group, rock band, Gleb Viktorov">
+    <meta name="description" content="Сайт о группе Три дня дождя, об участниках этой группы, о его создателе - Глебе Викторорве и об их успехах">
     <title>История создания группы</title>
+
+    <meta name="viewport" content="ya-title=#000000,ya-dock=fade" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="icon" href="img/favicon.ico" sizes="32x32">
     <link href="https://fonts.googleapis.com/css2?family=Martian+Mono:wght@400;700&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="css/style.css">
