--- a/article1.html
+++ b/article1.html
@@ -4,9 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="three days of rain, group, rock band, Gleb Viktorov">
+    <meta name="description" content="Сайт о группе Три дня дождя, об участниках этой группы, о его создателе - Глебе Викторорве и об их успехах">
+
+    <meta property="og:title" content="История создания группы">
+<meta property="og:site_name" content="Три дня дождя">
+<meta property="og:url" content="https://dashakirt000.github.io/first-project/">
+<meta property="og:description" content="Описывается история создания группы Три дня дождя, рассказывается с чего группа начинает и что в планах на будущее">
+<meta property="og:image" content="img/images.png">
+
+<meta name="viewport" content="ya-title=#000000,ya-dock=fade" />
+
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="icon" href="img/favicon.ico" sizes="32x32">
     <link href="https://fonts.googleapis.com/css2?family=Martian+Mono:wght@400;700&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="css/style.css">
