--- a/article2.html
+++ b/article2.html
@@ -13,6 +13,10 @@
 <meta property="og:description" content="Речь идет о солисте и о главном лице группы Три дня дождя, рассказывается о его личноси, о его истории, об успехах и неудачах">
 <meta property="og:image" content="img/382c1f940cd7.jpg">
 
+<meta name="theme-color" content="#4285f4" />
+<meta name="msapplication-navbutton-color" content="#4285f4" />
+<meta name="apple-mobile-web-app-capable" content="yes" />
+<meta name="apple-mobile-web-app-status-bar-style" content="black-transcluent" />
 <meta name="viewport" content="ya-title=#000000,ya-dock=fade" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
