--- a/article1.html
+++ b/article1.html
@@ -13,6 +13,10 @@
 <meta property="og:description" content="Описывается история создания группы Три дня дождя, рассказывается с чего группа начинает и что в планах на будущее">
 <meta property="og:image" content="img/images.png">
 
+<meta name="theme-color" content="#4285f4" />
+<meta name="msapplication-navbutton-color" content="#4285f4" />
+<meta name="apple-mobile-web-app-capable" content="yes" />
+<meta name="apple-mobile-web-app-status-bar-style" content="black-transcluent" />
 <meta name="viewport" content="ya-title=#000000,ya-dock=fade" />
 
 
