--- a/article4.html
+++ b/article4.html
@@ -8,6 +8,10 @@
     <meta name="description" content="Сайт о группе Три дня дождя, об участниках этой группы, о его создателе - Глебе Викторорве и об их успехах">
     <title>История создания группы</title>
 
+    <meta name="theme-color" content="#4285f4" />
+    <meta name="msapplication-navbutton-color" content="#4285f4" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-transcluent" />
     <meta name="viewport" content="ya-title=#000000,ya-dock=fade" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
