--- a/index.html
+++ b/index.html
@@ -13,7 +13,13 @@
 <meta property="og:description" content="Сайт группы Три дня дождя, на котором кратко рассказывается об этой грцппе и о ее участниках">
 <meta property="og:image" content="img/338520_large.jpg">
 
+
+<meta name="theme-color" content="#4285f4" />
+<meta name="msapplication-navbutton-color" content="#4285f4" />
+<meta name="apple-mobile-web-app-capable" content="yes" />
+<meta name="apple-mobile-web-app-status-bar-style" content="black-transcluent" />
 <meta name="viewport" content="ya-title=#000000,ya-dock=fade" />
+
 
     <title>Три дня дождя</title>
     
